--- a/portal/templates/post.html
+++ b/portal/templates/post.html
@@ -9,6 +9,7 @@
       <p class="article-content">{{ post.content }}</p>
       
       {% if current_user.user_type == 'student' -%}
+      {% if post_user_type != 'student' -%}
       {% if post.doc %}
       <article class="media content-section">
         <a href="{{ url_for('download') }}">Download File</a></article>
@@ -27,16 +28,19 @@
             </form>
         </div>
       {% endif %}
-      
-      <legend class="border-bottom mb-4">{{ legend }}</legend>
-        {% if current_user.user_type != 'student' -%}
+      {% endif %}
+
+      <a href="{{ url_for('reply') }}">Reply</a>
+
+      {% if post_user_type != 'student' -%}
+        <legend class="border-bottom mb-4">{{ legend }}</legend>
         <h3 class="turned_in">Student Submissions</h3>
         {% for i in range(turn_in_len) %}
             <h5>{{ turn_ins[i].st_name }}  {{ turn_ins[i].date_posted.strftime('%H:%M %a') }} 
             <a href="{{ url_for('download_assign', i=i) }}">{{ turn_ins[i].doc_name }}</a></h5>
         {% endfor %}
         {% endif %}
-
+        
     </div>
   </article>
 {% endblock content %}
