--- a/portal/templates/about.html
+++ b/portal/templates/about.html
@@ -5,13 +5,15 @@
         <p>
             This website is used by schools to manage students.
             School admins can register their school in the register page.
-            The login id of the admin who registers the school is the first letter of the school and 'ad1'.
-            If school name is Bright Riders School, login id of the first admin is 'Bad1' 
+            An account will be created for the admin.
             This admin can add other admins, teachers and students.
-            Admin should provide members with their login ids.
-            Password of everyone other than admin
-            is 123456 at first. The other members should change it.
-            Teachers can use this website to give assignments for students to submit.
+            Admin should provide the newly added members with their login ids.
+            Their passwords will be 123456.
+            They should immediately change their passwords. 
+            Teachers can assign homework for students.
+            Students can turn in their completed assignments and the teachers will be able to
+            download the submissions.
+            Students can post questions and doubts they have and teachers can reply to them.
         </p>
 </div>
 {%endblock%}
